--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -39,7 +40,7 @@
     "@upstash/redis": "^1.21.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "class-variance-authority": "^0.6.0",
+    "class-variance-authority": "^0.6.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "editorjs-react-renderer": "^3.5.1",
@@ -48,7 +49,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.221.0",
     "nanoid": "^4.0.2",
-    "next": "13.4.4",
+    "next": "^13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "prisma": "^4.14.1",
@@ -64,10 +65,26 @@
     "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4",
     "uploadthing": "^4.0.0",
+    "yarn": "^1.22.19",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/editorjs__header": "^2.6.0",
     "@types/lodash.debounce": "^4.0.7"
-  }
+  },
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joschan21/breadit.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/joschan21/breadit/issues"
+  },
+  "homepage": "https://github.com/joschan21/breadit#readme",
+  "directories": {
+    "lib": "lib"
+  },
+  "description": ""
 }
